--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,9 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 # Email sender details
 app.mail.from-address=${MAIL_FROM:noreply@travelhub.com}
 app.mail.from-name=TravelHub
-tripjack.api.flightsreviewapi=tripjack.api.review-endpoint:/fms/v1/review
+tripjack.api.flightsreviewapi=https://apitest.tripjack.com/fms/v1/review
+
+# R2DBC MSSQL Configuration
+spring.r2dbc.url=r2dbc:mssql://192.168.1.24:1433/TravelHub
+spring.r2dbc.username=user_travelhub
+spring.r2dbc.password=travelhub
