hotlesbooking changes done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,8 +25,9 @@ app.mail.from-name=TravelHub
 tripjack.api.flightsreviewapi=tripjack.api.review-endpoint:/fms/v1/review
 
 # Hotel API Configuration
-hotel.api.base-url=https://apitest.tripjack.com
-hotel.api.key=6128191307dd32-e195-4bc9-8a8f-369b55cee843
+hotel.api.search-url=https://apitest.tripjack.com/hms/v1/hotel-searchquery-list
+hotel.api.search-detail-url=https://apitest.tripjack.com/hms/v1/hotelDetail-search
+hotel.api.key=612819533ab1e9-9286-40b2-995e-6952e16ba628
 
 # Mock Data Configuration
 # Set to true to use mock data instead of calling TripJack API
