--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,18 @@
     <artifactId>mssql-jdbc</artifactId>
     <version>12.6.0.jre11</version>
 </dependency>
+        
+        <!-- Spring JDBC for database access -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        
+        <!-- Password hashing -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+        </dependency>
         <!-- Thymeleaf for HTML email templates -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
