changes done for loading issue review page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 # Email sender details
 app.mail.from-address=${MAIL_FROM:noreply@travelhub.com}
 app.mail.from-name=TravelHub
-tripjack.api.flightsreviewapi=tripjack.api.review-endpoint:/fms/v1/review
+tripjack.api.flightsreviewapi=/fms/v1/review
 
 # Database Configuration (SQL Server)
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=TravelHub;encrypt=true;trustServerCertificate=true
