Updated the hotel search

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 spring.main.web-application-type=reactive
 tripjack.base-url=https://apitest.tripjack.com
-tripjack.api-key=612819533ab1e9-9286-40b2-995e-6952e16ba628
+tripjack.api-key=6128195cb95765-02c3-4c40-a3d2-d4e8ed294ab0
 tripjack.api.base-url=https://apitest.tripjack.com
 spring.codec.max-in-memory-size=10MB
 tripjack.api.fareRuleapi=https://apitest.tripjack.com/fms/v1/farerule
@@ -27,9 +27,18 @@ tripjack.api.flightsreviewapi=tripjack.api.review-endpoint:/fms/v1/review
 # Hotel API Configuration
 hotel.api.search-url=https://apitest.tripjack.com/hms/v1/hotel-searchquery-list
 hotel.api.search-detail-url=https://apitest.tripjack.com/hms/v1/hotelDetail-search
-hotel.api.key=612819533ab1e9-9286-40b2-995e-6952e16ba628
+hotel.api.key=6128195cb95765-02c3-4c40-a3d2-d4e8ed294ab0
+
+# Location Service Configuration
+location.datasource.type=file
+location.datasource.file.path=HotelSearchallApi.txt
+
+# JPA Configuration for Location Service (H2 in-memory for file mode)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.h2.console.enabled=false
 
 # Mock Data Configuration
 # Set to true to use mock data instead of calling TripJack API
 # Useful for testing when TripJack test server is unavailable
-travelhub.mock.enabled=true
+travelhub.mock.enabled=false
