Completed hotel search API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ hotel.api.key=6128195cb95765-02c3-4c40-a3d2-d4e8ed294ab0
 
 # Location Service Configuration
 location.datasource.type=file
-location.datasource.file.path=HotelSearchallApi.txt
+location.datasource.file.path=classpath:HotelSearchallApi.txt
 
 # JPA Configuration for Location Service (H2 in-memory for file mode)
 spring.jpa.hibernate.ddl-auto=update
