--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,20 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
 
+<!-- Source: https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-crypto</artifactId>
+    <version>7.1.0-M1</version>
+    <scope>compile</scope>
+</dependency>
+
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jdbc</artifactId>
+</dependency>
+
+
         
         <!-- Lombok -->
         <dependency>
