--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 spring.main.web-application-type=reactive
 tripjack.base-url=https://apitest.tripjack.com
-tripjack.api-key=6128191307dd32-e195-4bc9-8a8f-369b55cee843
+tripjack.api-key=6128195cb95765-02c3-4c40-a3d2-d4e8ed294ab0
 tripjack.api.base-url=https://apitest.tripjack.com
 spring.codec.max-in-memory-size=10MB
 tripjack.api.fareRuleapi=https://apitest.tripjack.com/fms/v1/farerule
@@ -22,4 +22,14 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 # Email sender details
 app.mail.from-address=${MAIL_FROM:noreply@travelhub.com}
 app.mail.from-name=TravelHub
-tripjack.api.flightsreviewapi=tripjack.api.review-endpoint:/fms/v1/review
+tripjack.api.flightsreviewapi=/fms/v1/review
+
+# Database Configuration (SQL Server)
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=TravelHub;encrypt=true;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=Travelhub@123
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# Debug logging
+travelhub.debug.dump-search-response=true
+travelhub.debug.log-tripjack=true
