Resolved issues with hotel search and detail search

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,9 @@ tripjack.api.flightsreviewapi=tripjack.api.review-endpoint:/fms/v1/review
 # Hotel API Configuration
 hotel.api.search-url=https://apitest.tripjack.com/hms/v1/hotel-searchquery-list
 hotel.api.search-detail-url=https://apitest.tripjack.com/hms/v1/hotelDetail-search
+hotel.api.cancellation.policy.url=https://apitest.tripjack.com/hms/v1/hotel-cancellation-policy
+hotel.api.review.url=https://apitest.tripjack.com/hms/v1/hotel-review
+
 hotel.api.key=6128195cb95765-02c3-4c40-a3d2-d4e8ed294ab0
 
 # Location Service Configuration
